--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.App1"
         tools:targetApi="31">
         <activity
+            android:name=".PayOutActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChooseLocationActivity"
             android:exported="false" />
-
         <activity
             android:name=".SignActivity"
             android:exported="false" />
@@ -27,14 +29,13 @@
             android:exported="false" />
         <activity
             android:name=".Splash_Screen"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
-            <!--  kiem soat giao dien khi ban phim ao suat hien          -->
+
+            <!-- kiem soat giao dien khi ban phim ao suat hien -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
