--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 }
