--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,18 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.8.0'
     implementation 'com.android.car.ui:car-ui-lib:2.6.0'
     implementation 'com.google.firebase:firebase-auth:23.0.0'
-    implementation 'com.google.firebase:firebase-storage:21.0.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.1'
+    implementation 'com.google.firebase:firebase-functions:21.0.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx:24.0.2'
+    implementation 'com.google.firebase:firebase-messaging:24.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation platform('com.google.firebase:firebase-bom:33.4.0') // Kiểm tra phiên bản mới nhất trên trang chính thức
+
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 }
