--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:21.0.0'
     implementation 'com.google.firebase:firebase-messaging-ktx:24.0.2'
     implementation 'com.google.firebase:firebase-messaging:24.0.2'
+    implementation 'com.google.firebase:firebase-inappmessaging:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
